Integrated HTML translations into .pot file

--- a/po/Makefile
+++ b/po/Makefile
@@ -16,6 +16,9 @@ build: update $(patsubst %.po,%.mo,$(wildcard *.po))
 
 clean:
 	rm -rf mo
+	# html
+	(po4a --rm-translations po4a.cfg)
+	rm -rf html/translated
 
 # update *.pot and merge updates into *.po files
 update:
@@ -50,3 +53,17 @@ update:
 		intltool-merge --quiet --desktop-style . $$LAUNCHER.in $$LAUNCHER ; \
 		rm $$LAUNCHER.in.h $$LAUNCHER.in ; \
 	done && echo OK
+	
+	# html
+	@ rm pot/*.pot
+	@ html2po -P en pot && echo "HTML pot files created"
+	@ msgcat pot/*.pot >> solydxk-welcome.pot
+	@ head -n50 solydxk-welcome.pot > .tmp && tail -n+51 solydxk-welcome.pot | sed '/fuzzy/,/X-/d' >> .tmp && mv -f .tmp solydxk-welcome.pot && echo "Pot files merged"
+	@ po4a po4a.cfg && echo "Po files and translations updated"
+	# don't ship incomplete translations
+	@ n_required=`ls en | wc -l`; \
+	for dir in `echo translated/*`; do \
+	    n_slides=`ls $$dir | wc -l`; \
+	    [ $$n_slides != $$n_required ] && rm -rf $$dir; \
+	done >/dev/null || true
+	@ echo "Shipped slideshow translations (`ls translated | wc -l`):" `ls translated`
