--- a/etc/xdg/autostart/solydxk-welcome.desktop
+++ b/etc/xdg/autostart/solydxk-welcome.desktop
@@ -1,8 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=SolydXK Welcome
+Name[ca]=SolydXK Welcome
 Name[nl]=SolydXK Welkom
 Comment=SolydXK Welcome Screen
+Comment[ca]=Pantalla de Benvinguda de SolydXK
 Comment[nl]=SolydXK Welkom Scherm
 Exec=solydxk-welcome -a
 Terminal=false
