--- a/po/po4a.cfg
+++ b/po/po4a.cfg
@@ -3,12 +3,15 @@
 [options] \
     opt:"--package-name solydxk-welcome \
          --master-charset UTF-8 \
-         --localized-charset UTF-8"
+         --localized-charset UTF-8 \
+         --keep 50"
 
 [type: xhtml] en/business.html         $lang:translated/$lang/business.html
 [type: xhtml] en/drivers.html          $lang:translated/$lang/drivers.html
 [type: xhtml] en/games.html            $lang:translated/$lang/games.html
 [type: xhtml] en/home.html             $lang:translated/$lang/home.html
-[type: xhtml] en/legal.html            $lang:translated/$lang/legal.html
+[type: xhtml] en/libreoffice.html      $lang:translated/$lang/libreoffice.html
+[type: xhtml] en/multimedia.html       $lang:translated/$lang/multimedia.html
 [type: xhtml] en/system.html           $lang:translated/$lang/system.html
 [type: xhtml] en/welcome.html          $lang:translated/$lang/welcome.html
+[type: xhtml] en/wine.html             $lang:translated/$lang/wine.html
