Skip some pages for armhf architecture

--- a/etc/xdg/autostart/solydxk-welcome.desktop
+++ b/etc/xdg/autostart/solydxk-welcome.desktop
@@ -5,11 +5,13 @@ Name[ca]=SolydXK Welcome
 Name[de]=Willkommen zu SolydXK
 Name[it]=Benvenuti su SolydXK
 Name[nl]=SolydXK Welkom
+Name[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome Screen
 Comment[ca]=Pantalla de Benvinguda de SolydXK
 Comment[de]=SolydXK Willkommen Bildschirm
 Comment[it]=Schermata di benvenuto di SoldyXK 
 Comment[nl]=SolydXK Welkom Scherm
+Comment[pt]=Tela de boas vindas do Solydxk
 Exec=solydxk-welcome -a
 Terminal=false
 Type=Application
