--- a/usr/share/applications/solydxk-welcome.desktop
+++ b/usr/share/applications/solydxk-welcome.desktop
@@ -4,16 +4,19 @@ Name[ca]=Benvinguts
 Name[de]=Willkommen
 Name[it]=Benvenuti
 Name[nl]=Welkom
+Name[pt]=Bem-vindo
 GenericName=SolydXK Welcome
 GenericName[ca]=SolydXK Welcome
 GenericName[de]=Willkommen zu SolydXK
 GenericName[it]=Benvenuti su SolydXK
 GenericName[nl]=SolydXK Welkom
+GenericName[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome
 Comment[ca]=SolydXK Welcome
 Comment[de]=Willkommen zu SolydXK
 Comment[it]=Benvenuti su SolydXK
 Comment[nl]=SolydXK Welkom
+Comment[pt]=Bem-vindo ao SolydXK
 Exec=solydxk-welcome
 Icon=solydxk
 Terminal=False
