--- a/etc/xdg/autostart/solydxk-welcome.desktop
+++ b/etc/xdg/autostart/solydxk-welcome.desktop
@@ -2,13 +2,13 @@
 Encoding=UTF-8
 Name=SolydXK Welcome
 Name[ca]=SolydXK Welcome
-Name[de]=Willkommen zu SolydXK
+Name[de]=SolydXK Willkommen
 Name[it]=Benvenuti su SolydXK
 Name[nl]=SolydXK Welkom
 Name[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome Screen
 Comment[ca]=Pantalla de Benvinguda de SolydXK
-Comment[de]=SolydXK Willkommen Bildschirm
+Comment[de]=SolydXK Willkommens-Bildschirm
 Comment[it]=Schermata di benvenuto di SoldyXK 
 Comment[nl]=SolydXK Welkom Scherm
 Comment[pt]=Tela de boas vindas do Solydxk
