--- a/usr/share/applications/solydxk-welcome.desktop
+++ b/usr/share/applications/solydxk-welcome.desktop
@@ -7,13 +7,13 @@ Name[nl]=Welkom
 Name[pt]=Bem-vindo
 GenericName=SolydXK Welcome
 GenericName[ca]=SolydXK Welcome
-GenericName[de]=Willkommen zu SolydXK
+GenericName[de]=SolydXK Willkommen
 GenericName[it]=Benvenuti su SolydXK
 GenericName[nl]=SolydXK Welkom
 GenericName[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome
 Comment[ca]=SolydXK Welcome
-Comment[de]=Willkommen zu SolydXK
+Comment[de]=SolydXK Willkommen
 Comment[it]=Benvenuti su SolydXK
 Comment[nl]=SolydXK Welkom
 Comment[pt]=Bem-vindo ao SolydXK
