--- a/usr/share/applications/solydxk-welcome.desktop
+++ b/usr/share/applications/solydxk-welcome.desktop
@@ -2,19 +2,25 @@
 Name=Welcome
 Name[ca]=Benvinguts
 Name[de]=Willkommen
+Name[fr]=Bienvenue
 Name[it]=Benvenuti
+Name[nb]=Velkommen
 Name[nl]=Welkom
 Name[pt]=Bem-vindo
 GenericName=SolydXK Welcome
 GenericName[ca]=SolydXK Welcome
 GenericName[de]=SolydXK Willkommen
+GenericName[fr]=SolydXK Welcome
 GenericName[it]=Benvenuti su SolydXK
+GenericName[nb]=SolydXK Velkommen
 GenericName[nl]=SolydXK Welkom
 GenericName[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome
 Comment[ca]=SolydXK Welcome
 Comment[de]=SolydXK Willkommen
+Comment[fr]=SolydXK Welcome
 Comment[it]=Benvenuti su SolydXK
+Comment[nb]=SolydXK Velkommen
 Comment[nl]=SolydXK Welkom
 Comment[pt]=Bem-vindo ao SolydXK
 Exec=solydxk-welcome
