--- a/etc/xdg/autostart/solydxk-welcome.desktop
+++ b/etc/xdg/autostart/solydxk-welcome.desktop
@@ -3,15 +3,19 @@ Encoding=UTF-8
 Name=SolydXK Welcome
 Name[ca]=SolydXK Welcome
 Name[de]=SolydXK Willkommen
+Name[fr]=SolydXK Welcome
 Name[it]=Benvenuti su SolydXK
+Name[nb]=SolydXK Velkommen
 Name[nl]=SolydXK Welkom
 Name[pt]=Bem-vindo ao SolydXK
 Comment=SolydXK Welcome Screen
 Comment[ca]=Pantalla de Benvinguda de SolydXK
 Comment[de]=SolydXK Willkommens-Bildschirm
+Comment[fr]=SolydXK Welcome Screen
 Comment[it]=Schermata di benvenuto di SoldyXK 
+Comment[nb]=SolydXK Velkomstskjerm
 Comment[nl]=SolydXK Welkom Scherm
-Comment[pt]=Tela de boas vindas do Solydxk
+Comment[pt]=Ecrã de Bem-vindo do Solydxk
 Exec=solydxk-welcome -a
 Terminal=false
 Type=Application
