Flat logo in background information pages

--- a/usr/share/applications/solydxk-welcome.desktop
+++ b/usr/share/applications/solydxk-welcome.desktop
@@ -24,7 +24,7 @@ Comment[nb]=SolydXK Velkommen
 Comment[nl]=SolydXK Welkom
 Comment[pt]=Bem-vindo ao SolydXK
 Exec=solydxk-welcome
-Icon=solydxk
+Icon=solydxk-flat
 Terminal=False
 Type=Application
 Categories=System;
